<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Neunition</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="facebook_app_id" translatable="false">1398258690687604</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1398258690687604</string>
    <string name="facebook_client_token" translatable="false">1fa952b0c8c7b2489f85296e0dc11a5f</string>
    <string name="enter_meal_name">Enter your meal.</string>
    <string name="settings_icon">Settings</string>
    <string name="neunition_logo">Neunition Logo</string>
    <string name="today">Today: 0.0 kg of CO₂-eq</string>
    <string name="week">This Week: 0.0 kg of CO₂-eq</string>
    <string name="month">This Month: 0.0 kg of CO₂-eq</string>
    <string name="year">This Year: 0.0 kg of CO₂-eq</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_internet_connection">No internet connection found. Please check your connection.</string>
    <string name="user_profile_picture">User\'s profile picture.</string>
    <string name="agreement">By continuing, you agree to our <b>Terms &amp; Conditions</b>\nand <b>Privacy Policy</b>.</string>
    <string name="ingredient">Ingredient</string>
    <string name="plus">+</string>
    <string name="weight">Weight</string>
    <string name="current_ghg_emissions">Current GHG Emissions: 0.0 kg of CO₂-eq</string>
    <string name="ingredient_emissions_placeholder">weight of x = weight kg of CO₂-eq</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="select_diet_health_labels">Select diet/health labels</string>
    <string name="submit">Submit</string>
    <string name="title_of_recipe">Title of recipe</string>
    <string name="zero_score">0.00</string>
    <string name="my_account_header">MY ACCOUNT</string>
    <string name="support_header">SUPPORT</string>
    <string name="breakfast_notification">Good Morning! &#127774;</string>
    <string name="lunch_notification">It\'s Lunch Time! &#x1F37D;&#xFE0F;</string>
    <string name="dinner_notification">Dinner Is Ready! &#127747;</string>
    <string name="image_of_the_recipe">Image of the recipe</string>
    <string name="progress_bar_recipe_description">A indeterminate progress bar for loading the recipe.</string>
    <string name="random_selection_of_recipes">Get a random selection of recipes</string>
    <string name="add_recipe_ghg">Add the greenhouse gas emissions of this recipe to your current greenhouse gas emissions records.</string>
    <string name="add_ingredient_to_your_list">Add ingredient to your list</string>
    <string name="upload_image_ingredients">Upload an image with a list of ingredients to calculate total GHG emissions</string>
    <string name="add_emissions_ingredients_records">Add calculated GHG emissions for your ingredients to your GHG emissions records</string>
    <string name="clear_ingredients">Clear list of ingredients</string>
    <string name="unit">Unit</string>
    <string name="admob_app_id">ca-app-pub-2714747137112577~8955566415</string>
</resources>