<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".ui.main.view.LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_sign_in_button"
        style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toTopOf="@+id/terms_privacy_agreement"
        app:layout_constraintEnd_toEndOf="@+id/facebook_sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/facebook_sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/facebook_sign_in_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook_sign_in_button"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:text="@string/continue_with_facebook"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/neunition_logo"
        app:layout_constraintBottom_toTopOf="@+id/facebook_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/agree_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/terms_privacy_agreement"
        app:layout_constraintEnd_toStartOf="@+id/terms_privacy_agreement"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/terms_privacy_agreement" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/terms_privacy_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:fontFamily="@font/roboto_light"
        android:text="@string/agreement"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/agree_check_box"
        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />

</androidx.constraintlayout.widget.ConstraintLayout>