<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.GreenhouseGasEmissionsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/today_score_text_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_score"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:padding="20dp"
        android:text="@string/today"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/week_score_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/week_score_text_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_score"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:padding="20dp"
        android:text="@string/week"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/month_score_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_score_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/month_score_text_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_score"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:padding="20dp"
        android:text="@string/month"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/year_score_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week_score_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/year_score_text_view"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_gravity="center|center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_score"
        android:elevation="2dp"
        android:fontFamily="@font/roboto"
        android:padding="20dp"
        android:text="@string/year"
        android:textColor="@android:color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/month_score_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>