<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.RecipesFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/recipe_search_nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_recipe_edit_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_search_text_view"
                android:elevation="2dp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/search_for_a_recipe"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:paddingStart="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toTopOf="@+id/select_label_text_view"
                app:layout_constraintEnd_toStartOf="@+id/search_recipe_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/search_recipe_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/recipes_search_button_touch_selector"
                android:contentDescription="@string/submit"
                android:elevation="2dp"
                android:padding="12dp"
                android:src="@drawable/ic_outline_search"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/search_recipe_edit_text_view"
                app:layout_constraintEnd_toStartOf="@+id/random_recipe_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/search_recipe_edit_text_view"
                app:layout_constraintTop_toTopOf="@+id/search_recipe_edit_text_view" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/random_recipe_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/recipes_random_button_touch_selector"
                android:contentDescription="@string/random_selection_of_recipes"
                android:elevation="2dp"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_shuffle"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/search_recipe_edit_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/search_recipe_edit_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select_label_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_text_view"
                android:drawablePadding="16dp"
                android:elevation="2dp"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/select_diet_health_labels"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="#757575"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_drop_down"
                app:layout_constraintBottom_toTopOf="@+id/edamam_recipes_recycler_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_recipe_edit_text_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/edamam_recipes_recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_label_text_view"
                app:spanCount="2"
                tools:listitem="@layout/recipe_card" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>